--- a/backend_digital_banking_secure/src/main/resources/application.properties
+++ b/backend_digital_banking_secure/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8085
 spring.datasource.url=${DATA_SOURCE_URL_NAME}
 spring.datasource.username=${LOCAL_DB_USER}
 spring.datasource.password=${LOCAL_DB_PASSWORD}
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDBDialect
 spring.jpa.show-sql=true
 
